<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_user_name"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                         />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/userPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>
                <com.dd.CircularProgressButton
                    android:id="@+id/frg_select_map_btn_retry"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:textColor="#fff"
                    android:textSize="18sp"
                    app:cpb_cornerRadius="50dp"
                    app:cpb_iconComplete="@drawable/ic_tick_white"
                    app:cpb_iconError="@drawable/ic_refresh_white"
                    app:cpb_selectorComplete="@drawable/selector_circle_progress_success"
                    app:cpb_selectorError="@drawable/selector_circle_progress_error"
                    app:cpb_selectorIdle="@drawable/selector_circle_progress_idle"
                    app:cpb_textError="@string/error_invalid_email"
                    app:cpb_textIdle="@string/action_sign_in"
                    />
            

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>